--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Pradeep H Krishnamurthy!</h1>
-				<p>Software Architect/Developer with 20yrs of experience in  <em>scalable Network Management Solutions</em> <a href="/about">Read more about me...</a></p>
+				<p>Software Architect/Developer with 20yrs of experience in building  <em>scalable Network Management Solutions</em> <a href="/about">Read more about me...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
