--- a/about/index.html
+++ b/about/index.html
@@ -3,42 +3,69 @@ layout: default
 title: About Pradeep H Krishnamurthy
 ---
 
-		<div class="about">
-			<h1>About</h1>
-			<p></p>
+<div class="about">
+  <h1>About</h1>
+  <p></p>
+  <table>
+    <tr>
+      <th>Professional Experience(2005-Present)</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td>Juniper Networks India Pvt Ltd</td>
+      <td>Software Designer and Developer in different products
+        <ul>
+          <li>5G O-Cloud Orchestrator</li>
+          <li>Cloud-Native EMS</li>
+          <li>Secure SD-WAN</li>
+          <li>Cloudstack Plugin</li>
+          <li>JUNOS Space Network Director and Connectivity Services Director</li>
+          <li>Netscreen Security Manager</li>
+       </ul>
+      </td>
+      <td>Cisco Systems India Pvt Ltd(2001-2005)</td>
+      <td>Software Developer in 
+        <ul>
+            <li>Resource Manager Essentials</li>
+         </ul>
+      </td>
+    </tr>         
+  </table>      
 
-			<table>
-        <tr>
-          <th>Skill</th>
-          <th>Description</th>
-        </tr>
-        <tr>
-          <td>Programming languges</td>
-          <td>Golang, Python, Java</td>
-        </tr>
-        <tr>
-          <td>Cloud native technologies</td>
-          <td>Kubernetes(along with Argo, Flannel, Calico), Docker, Micro-services (REST, gRPC)</td>
-        </tr>
-        <tr>
-          <td>Networking</td>
-          <td>L2, L3, MPLS, Security, SDN, SD-WAN</td>
-        </tr>
-        <tr>
-          <td>Modeling</td>
-          <td>YANG, Design Patterns, UML</td>
-        </tr>
-        <tr>
-          <td>Build Tools</td>
-          <td>bazel, maven, scons</td>
-        </tr>
-        <tr>
-          <td>Process</td>
-          <td>Agile, JIRA</td>
-        </tr>
-        <tr>
-          <td>DevOps Tools</td>
-          <td>Jenkins, Ansible</td>
-        </tr>        
-      </table>
-	  </div>
+  <table>
+    <tr>
+      <th>Skill</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td>Programming languges</td>
+      <td>Golang, Python, Java</td>
+    </tr>
+    <tr>
+      <td>Cloud native technologies</td>
+      <td>Kubernetes(along with Argo, Flannel, Calico), Docker, Micro-services (REST, gRPC)</td>
+    </tr>
+    <tr>
+      <td>Networking</td>
+      <td>L2, L3, MPLS, Security, SDN, SD-WAN</td>
+    </tr>
+    <tr>
+      <td>Modeling</td>
+      <td>YANG, Design Patterns, UML</td>
+    </tr>
+    <tr>
+      <td>Build Tools</td>
+      <td>bazel, maven, scons</td>
+    </tr>
+    <tr>
+      <td>Process</td>
+      <td>Agile, JIRA</td>
+    </tr>
+    <tr>
+      <td>DevOps Tools</td>
+      <td>Jenkins, Ansible</td>
+    </tr>        
+  </table>
+</div>
+    
+    
