--- a/about/index.html
+++ b/about/index.html
@@ -8,11 +8,11 @@ title: About Pradeep H Krishnamurthy
   <p></p>
   <table>
     <tr>
-      <th>Professional Experience(2005-Present)</th>
+      <th>Professional Experience</th>
       <th>Description</th>
     </tr>
     <tr>
-      <td>Juniper Networks India Pvt Ltd</td>
+      <td>Juniper Networks India Pvt Ltd(2005-Present)</td>
       <td>Software Designer and Developer in different products
         <ul>
           <li>5G O-Cloud Orchestrator</li>
@@ -21,16 +21,20 @@ title: About Pradeep H Krishnamurthy
           <li>Cloudstack Plugin</li>
           <li>JUNOS Space Network Director and Connectivity Services Director</li>
           <li>Netscreen Security Manager</li>
-       </ul>
+        </ul>
       </td>
+    </tr>
+    <tr>    
       <td>Cisco Systems India Pvt Ltd(2001-2005)</td>
       <td>Software Developer in 
         <ul>
             <li>Resource Manager Essentials</li>
-         </ul>
+        </ul>
       </td>
     </tr>         
-  </table>      
+  </table> 
+
+  <p></p>  
 
   <table>
     <tr>
@@ -66,6 +70,5 @@ title: About Pradeep H Krishnamurthy
       <td>Jenkins, Ansible</td>
     </tr>        
   </table>
-</div>
-    
+</div>    
     
