--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ title: About Pradeep H Krishnamurthy
     </tr>
     <tr>
       <td>Juniper Networks India Pvt Ltd(2005-Present)</td>
-      <td>Software Designer and Developer in different products
+      <td>Software(backend) Designer and Developer in different products
         <ul>
           <li>5G O-Cloud Orchestrator</li>
           <li>Cloud-Native EMS</li>
@@ -38,7 +38,7 @@ title: About Pradeep H Krishnamurthy
 
   <table>
     <tr>
-      <th>Skill</th>
+      <th>Skills</th>
       <th>Description</th>
     </tr>
     <tr>
