--- a/about/index.html
+++ b/about/index.html
@@ -6,14 +6,35 @@ title: About Pradeep H Krishnamurthy
 <div class="about">
   <h1>About</h1>
   <p></p>
+  <h2>Education</h2>
+  <p></p>
   <table>
     <tr>
-      <th>Professional Experience</th>
-      <th>Description</th>
+      <th>Degree</th>
+      <th>Details</th>
     </tr>
     <tr>
-      <td>Juniper Networks India Pvt Ltd (2005-Present)</td>
-      <td>Software(backend) Designer and Developer in different products
+      <td>BE in Computer Science and Engineering</td>
+      <td>Sri Jayachamarajendra College of Engineering, Mysore<br/>1997 - 2001</td>
+    </tr>
+    <tr>
+      <td>Masters in Computer Science</td>
+      <td>Illinois Institute Of Technology, Chicago(via Distance Learning)<br/>2006 – 2010</td>
+    </tr>
+  </table>
+  
+  <p></p>
+  
+  <h2>Professional Experience</h2>
+  <p></p>
+  <table>
+    <tr>
+      <th>Company</th>
+      <th>Details</th>
+    </tr>
+    <tr>
+      <td>Juniper Networks India Pvt Ltd(2005-Present)</td>
+      <td>Software Designer and Developer in different products
         <ul>
           <li>5G O-Cloud Orchestrator</li>
           <li>Cloud-Native EMS</li>
@@ -25,7 +46,7 @@ title: About Pradeep H Krishnamurthy
       </td>
     </tr>
     <tr>    
-      <td>Cisco Systems India Pvt Ltd (2001-2005)</td>
+      <td>Cisco Systems India Pvt Ltd(2001-2005)</td>
       <td>Software Developer in 
         <ul>
             <li>Resource Manager Essentials</li>
@@ -36,10 +57,12 @@ title: About Pradeep H Krishnamurthy
 
   <p></p>  
 
+  <h2>Skills</h2>
+  <p></p>
   <table>
     <tr>
-      <th>Skills</th>
-      <th>Description</th>
+      <th>Skill</th>
+      <th>Details</th>
     </tr>
     <tr>
       <td>Programming languges</td>
