--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@ title: About Pradeep H Krishnamurthy
       <th>Details</th>
     </tr>
     <tr>
-      <td>Juniper Networks India Pvt Ltd(2005-Present)</td>
+      <td>Juniper Networks India Pvt Ltd<br/>(2005-Present)</td>
       <td>Software Designer and Developer in different products
         <ul>
           <li>5G O-Cloud Orchestrator</li>
@@ -46,7 +46,7 @@ title: About Pradeep H Krishnamurthy
       </td>
     </tr>
     <tr>    
-      <td>Cisco Systems India Pvt Ltd(2001-2005)</td>
+      <td>Cisco Systems India Pvt Ltd<br/>(2001-2005)</td>
       <td>Software Developer in 
         <ul>
             <li>Resource Manager Essentials</li>
