--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
-        		<li><a href="https://github.com/pradeep-hk">github.com/pradeep-hk</a></li>
+        		<li><a href="mailto:pradeep_hk@yahoo.com">Email</a></li>
+        		<li><a href="https://github.com/pradeep-hk">Github</a></li>
+			<li><a href="https://in.linkedin.com/in/hkpradeep">Linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
