--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Pradeep H Krishnamurthy</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
 	<body>	
     		<div class="blurb">
         		<h1>Hi there, I'm Pradeep H Krishnamurthy!</h1>
