--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: About Pradeep H Krishnamurthy
   <p></p>
   <h2>Education</h2>
   <p></p>
-  <table>
+  <table border="1">
     <tr>
       <th>Degree</th>
       <th>Details</th>
@@ -27,7 +27,7 @@ title: About Pradeep H Krishnamurthy
   
   <h2>Professional Experience</h2>
   <p></p>
-  <table>
+  <table border="1">
     <tr>
       <th>Company</th>
       <th>Details</th>
@@ -59,7 +59,7 @@ title: About Pradeep H Krishnamurthy
 
   <h2>Skills</h2>
   <p></p>
-  <table>
+  <table border="1">
     <tr>
       <th>Skill</th>
       <th>Details</th>
