--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@ title: About Pradeep H Krishnamurthy
   <p></p>
   <table border="1">
     <tr>
-      <th>Skill</th>
+      <th>Skills</th>
       <th>Details</th>
     </tr>
     <tr>
