--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
----
-layout: default
-title: Pradeep H Krishnamurthy
----
-	<body>	
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Pradeep H Krishnamurthy</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Pradeep H Krishnamurthy!</h1>
 				<p>Software Architect/Developer with 20yrs of experience in building  <em>scalable Network Management Solutions</em> <a href="/about">Read more about me...</a></p>
     		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+          <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
+          <li><a href="https://github.com/pradeep-hk">github</a></li>
+          <li><a href="https://in.linkedin.com/in/hkpradeep">linkedin</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
