--- a/about/index.html
+++ b/about/index.html
@@ -15,14 +15,14 @@
         <li><a href="/blog">Blog</a></li>
         </ul>
     </nav>
-
+		
     <div class="container">
       <div class="about">
         <h1>About</h1>
         <p></p>
         <h2>Education</h2>
         <p></p>
-        <table border="1">
+        <table>
           <tr>
             <th>Degree</th>
             <th>Details</th>
@@ -41,7 +41,7 @@
         
         <h2>Professional Experience</h2>
         <p></p>
-        <table border="1">
+        <table>
           <tr>
             <th>Company</th>
             <th>Details</th>
@@ -73,7 +73,7 @@
 
         <h2>Skills</h2>
         <p></p>
-        <table border="1">
+        <table>
           <tr>
             <th>Skills</th>
             <th>Details</th>
@@ -108,7 +108,7 @@
           </tr>        
         </table>
       </div>
-    </div>
+    </div>		 
     <footer>
       <ul>
         <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
