--- a/about/index.html
+++ b/about/index.html
@@ -2,27 +2,16 @@
 <html>
 	<head>
 		<title>Pradeep H Krishnamurthy</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
   
 	<body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-        </ul>
-    </nav>
-		
     <div class="container">
       <div class="about">
         <h1>About</h1>
         <p></p>
         <h2>Education</h2>
         <p></p>
-        <table>
+        <table border="1">
           <tr>
             <th>Degree</th>
             <th>Details</th>
@@ -41,7 +30,7 @@
         
         <h2>Professional Experience</h2>
         <p></p>
-        <table>
+        <table border="1">
           <tr>
             <th>Company</th>
             <th>Details</th>
@@ -73,7 +62,7 @@
 
         <h2>Skills</h2>
         <p></p>
-        <table>
+        <table border="1">
           <tr>
             <th>Skills</th>
             <th>Details</th>
@@ -108,13 +97,6 @@
           </tr>        
         </table>
       </div>
-    </div>		 
-    <footer>
-      <ul>
-        <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
-        <li><a href="https://github.com/pradeep-hk">github</a></li>
-        <li><a href="https://in.linkedin.com/in/hkpradeep">linkedin</a></li>
-      </ul>
-    </footer>
+    </div>
   </body>
-<html>
+<html>  
