--- a/about/index.html
+++ b/about/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Pradeep H Krishnamurthy</title>
-	</head>
+  <head>
+    <title>Pradeep H Krishnamurthy</title>
+    <title>{{ page.title }}</title>    
+    <link rel="stylesheet" type="text/css" href="/css/main.css"> 
+  </head>
   
-	<body>
+  <body>
     <div class="container">
       <div class="about">
         <h1>About</h1>
         <p></p>
         <h2>Education</h2>
         <p></p>
-        <table border="1">
+        <table>
           <tr>
             <th>Degree</th>
             <th>Details</th>
@@ -30,7 +32,7 @@
         
         <h2>Professional Experience</h2>
         <p></p>
-        <table border="1">
+        <table>
           <tr>
             <th>Company</th>
             <th>Details</th>
@@ -62,7 +64,7 @@
 
         <h2>Skills</h2>
         <p></p>
-        <table border="1">
+        <table>
           <tr>
             <th>Skills</th>
             <th>Details</th>
