--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,3 @@
----
-layout: default
-title: About Pradeep H Krishnamurthy
----
-
 <div class="about">
   <h1>About</h1>
   <p></p>
@@ -93,4 +88,12 @@ title: About Pradeep H Krishnamurthy
       <td>Jenkins, Ansible</td>
     </tr>        
   </table>
-</div>    
+</div>
+
+<footer>
+  <ul>
+    <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
+    <li><a href="https://github.com/pradeep-hk">github</a></li>
+    <li><a href="https://in.linkedin.com/in/hkpradeep">linkedin</a></li>
+  </ul>
+</footer>    
