--- a/about/index.html
+++ b/about/index.html
@@ -90,10 +90,12 @@
   </table>
 </div>
 
+<div class="footer">
 <footer>
   <ul>
     <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
     <li><a href="https://github.com/pradeep-hk">github</a></li>
     <li><a href="https://in.linkedin.com/in/hkpradeep">linkedin</a></li>
   </ul>
-</footer>    
+</footer> 
+</div>
