--- a/about/index.html
+++ b/about/index.html
@@ -1,101 +1,118 @@
-<div class="about">
-  <h1>About</h1>
-  <p></p>
-  <h2>Education</h2>
-  <p></p>
-  <table>
-    <tr>
-      <th>Degree</th>
-      <th>Details</th>
-    </tr>
-    <tr>
-      <td>BE in Computer Science and Engineering</td>
-      <td>Sri Jayachamarajendra College of Engineering, Mysore<br/>1997 - 2001</td>
-    </tr>
-    <tr>
-      <td>Masters in Computer Science</td>
-      <td>Illinois Institute Of Technology, Chicago(via Distance Learning)<br/>2006 – 2010</td>
-    </tr>
-  </table>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Pradeep H Krishnamurthy</title>    
+    <link rel="stylesheet" type="text/css" href="/css/main.css"> 
+  </head>
   
-  <p></p>
-  
-  <h2>Professional Experience</h2>
-  <p></p>
-  <table>
-    <tr>
-      <th>Company</th>
-      <th>Details</th>
-    </tr>
-    <tr>
-      <td>Juniper Networks India Pvt Ltd<br/>(2005-Present)</td>
-      <td>Software Designer and Developer in different products
-        <ul>
-          <li>5G O-Cloud Orchestrator</li>
-          <li>Cloud-Native EMS</li>
-          <li>Secure SD-WAN</li>
-          <li>Cloudstack Plugin</li>
-          <li>JUNOS Space Network Director and Connectivity Services Director</li>
-          <li>Netscreen Security Manager</li>
-        </ul>
-      </td>
-    </tr>
-    <tr>    
-      <td>Cisco Systems India Pvt Ltd<br/>(2001-2005)</td>
-      <td>Software Developer in 
-        <ul>
-            <li>Resource Manager Essentials</li>
-        </ul>
-      </td>
-    </tr>         
-  </table> 
+  <body>
+    <nav>
+      <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/cv">CV</a></li>
+          <li><a href="/blog">Blog</a></li>
+      </ul>
+    </nav>  
+    <div class="container">
+      <div class="about">
+        <h1>About</h1>
+        <p></p>
+        <h2>Education</h2>
+        <p></p>
+        <table>
+          <tr>
+            <th>Degree</th>
+            <th>Details</th>
+          </tr>
+          <tr>
+            <td>BE in Computer Science and Engineering</td>
+            <td>Sri Jayachamarajendra College of Engineering, Mysore<br/>1997 - 2001</td>
+          </tr>
+          <tr>
+            <td>Masters in Computer Science</td>
+            <td>Illinois Institute Of Technology, Chicago(via Distance Learning)<br/>2006 – 2010</td>
+          </tr>
+        </table>
+        
+        <p></p>
+        
+        <h2>Professional Experience</h2>
+        <p></p>
+        <table>
+          <tr>
+            <th>Company</th>
+            <th>Details</th>
+          </tr>
+          <tr>
+            <td>Juniper Networks India Pvt Ltd<br/>(2005-Present)</td>
+            <td>Software Designer and Developer in different products
+              <ul>
+                <li>5G O-Cloud Orchestrator</li>
+                <li>Cloud-Native EMS</li>
+                <li>Secure SD-WAN</li>
+                <li>Cloudstack Plugin</li>
+                <li>JUNOS Space Network Director and Connectivity Services Director</li>
+                <li>Netscreen Security Manager</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>    
+            <td>Cisco Systems India Pvt Ltd<br/>(2001-2005)</td>
+            <td>Software Developer in 
+              <ul>
+                  <li>Resource Manager Essentials</li>
+              </ul>
+            </td>
+          </tr>         
+        </table> 
 
-  <p></p>  
+        <p></p>  
 
-  <h2>Skills</h2>
-  <p></p>
-  <table>
-    <tr>
-      <th>Skills</th>
-      <th>Details</th>
-    </tr>
-    <tr>
-      <td>Programming languges</td>
-      <td>Golang, Python, Java</td>
-    </tr>
-    <tr>
-      <td>Cloud native technologies</td>
-      <td>Kubernetes(along with Argo, Flannel, Calico), Docker, Micro-services (REST, gRPC)</td>
-    </tr>
-    <tr>
-      <td>Networking</td>
-      <td>L2, L3, MPLS, Security, SDN, SD-WAN</td>
-    </tr>
-    <tr>
-      <td>Modeling</td>
-      <td>YANG, Design Patterns, UML</td>
-    </tr>
-    <tr>
-      <td>Build Tools</td>
-      <td>bazel, maven, scons</td>
-    </tr>
-    <tr>
-      <td>Process</td>
-      <td>Agile, JIRA</td>
-    </tr>
-    <tr>
-      <td>DevOps Tools</td>
-      <td>Jenkins, Ansible</td>
-    </tr>        
-  </table>
-</div>
-
-<div class="footer">
-<footer>
-  <ul>
-    <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
-    <li><a href="https://github.com/pradeep-hk">github</a></li>
-    <li><a href="https://in.linkedin.com/in/hkpradeep">linkedin</a></li>
-  </ul>
-</footer> 
-</div>
+        <h2>Skills</h2>
+        <p></p>
+        <table>
+          <tr>
+            <th>Skills</th>
+            <th>Details</th>
+          </tr>
+          <tr>
+            <td>Programming languges</td>
+            <td>Golang, Python, Java</td>
+          </tr>
+          <tr>
+            <td>Cloud native technologies</td>
+            <td>Kubernetes(along with Argo, Flannel, Calico), Docker, Micro-services (REST, gRPC)</td>
+          </tr>
+          <tr>
+            <td>Networking</td>
+            <td>L2, L3, MPLS, Security, SDN, SD-WAN</td>
+          </tr>
+          <tr>
+            <td>Modeling</td>
+            <td>YANG, Design Patterns, UML</td>
+          </tr>
+          <tr>
+            <td>Build Tools</td>
+            <td>bazel, maven, scons</td>
+          </tr>
+          <tr>
+            <td>Process</td>
+            <td>Agile, JIRA</td>
+          </tr>
+          <tr>
+            <td>DevOps Tools</td>
+            <td>Jenkins, Ansible</td>
+          </tr>        
+        </table>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="mailto:pradeep_hk@yahoo.com">email</a></li>
+        <li><a href="https://github.com/pradeep-hk">github</a></li>
+        <li><a href="https://in.linkedin.com/in/hkpradeep">linkedin</a></li>
+      </ul>
+    </footer>    
+  </body>
+<html>  
