--- a/about/index.html
+++ b/about/index.html
@@ -18,8 +18,9 @@
       <div class="about">
         <h1>About</h1>
         <p></p>
-        <table>
-          <caption>Education</caption>
+        <h2>Education</h2>
+        <p></p>
+        <table>          
           <thead>
             <tr>
               <th>Degree</th>
