--- a/about/index.html
+++ b/about/index.html
@@ -31,11 +31,86 @@
           <tbody>
             <tr>
               <th>BE in Computer Science and Engineering</th>
-              <td>Sri Jayachamarajendra College of Engineering, Mysore<br/>1997 - 2001</th>
+              <td>Sri Jayachamarajendra College of Engineering, Mysore<br/>1997 - 2001</td>
             </tr>
             <tr>
               <th>Masters in Computer Science</th>
-              <td>Illinois Institute Of Technology, Chicago(via Distance Learning)<br/>2006 – 2010</th>
+              <td>Illinois Institute Of Technology, Chicago(via Distance Learning)<br/>2006 – 2010</td>
+            </tr>
+          </tbody>
+        </table>
+        <p></p>
+        <h2>Professional Experience</h2>
+        <p></p>
+        <table>          
+          <thead>
+            <tr>
+              <th>Company</th>
+              <th>Details</th>
+            </tr>
+          </thead>  
+          <tbody>
+            <tr>
+              <th>Juniper Networks India Pvt Ltd<br/>(2005-Present)</th>
+              <td>Software Design and Development in different products
+                <ul>
+                  <li>5G O-Cloud Orchestrator</li>
+                  <li>Cloud-Native EMS</li>
+                  <li>Secure SD-WAN</li>
+                  <li>Cloudstack Plugin</li>
+                  <li>JUNOS Space Network Director and Connectivity Services Director</li>
+                  <li>Netscreen Security Manager</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <th>Cisco Systems India Pvt Ltd<br/>(2001-2005)</th>
+              <td>Software Development in 
+                <ul>
+                    <li>Resource Manager Essentials</li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <p></p>
+        <h2>Skills</h2>
+        <p></p>
+        <table>          
+          <thead>
+            <tr>
+              <th>Skill</th>
+              <th>Details</th>
+            </tr>
+          </thead>  
+          <tbody>
+            <tr>
+              <th>Programming languges</th>
+              <td>Golang, Python, Java</td>
+            </tr>
+            <tr>
+              <th>Cloud native technologies</th>
+              <td>Kubernetes(along with Argo, Flannel, Calico), Docker, Micro-services (REST, gRPC)</td>
+            </tr>
+            <tr>
+              <th>Networking</th>
+              <td>L2, L3, MPLS, Security, SDN, SD-WAN</td>
+            </tr>
+            <tr>
+              <th>Modeling</th>
+              <td>YANG, Design Patterns, UML</td>
+            </tr>
+            <tr>
+              <th>Build Tools</th>
+              <td>bazel, maven, scons</td>
+            </tr>
+            <tr>
+              <th>Process</th>
+              <td>Agile, JIRA</td>
+            </tr>
+            <tr>
+              <th>DevOps Tools</th>
+              <td>Jenkins, Ansible</td>
             </tr>
           </tbody>
         </table>
