--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="about">
         <h1>About</h1>
-        <p></p>
+        <p>A bit about me below in terms of Education and Professional experience/skill set</p>
         <h2>Education</h2>
         <table>          
           <thead>
