--- a/about/index.html
+++ b/about/index.html
@@ -56,6 +56,7 @@
                   <li>Cloud-Native EMS</li>
                   <li>Secure SD-WAN</li>
                   <li>Cloudstack Plugin</li>
+                  <li>QFabric Director</li>
                   <li>JUNOS Space Network Director and Connectivity Services Director</li>
                   <li>Netscreen Security Manager</li>
                 </ul>
