--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </nav>
     <div class="container">
         <div class="blurb">
+            <img src="/images/self.png">
             <h1>Hi there, I'm Pradeep H Krishnamurthy!</h1>
             <p>Seasoned software professional with 20yrs of design/development experience in building  <em>scalable Network Management Solutions</em> <a href="/about">Read more about me...</a></p>
         </div><!-- /.blurb -->
