--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,8 @@
               <th>Juniper Networks India Pvt Ltd<br/>(2005-Present)</th>
               <td>Software Design and Development in different products
                 <ul>
-                  <li>5G O-Cloud Orchestrator</li>
+                  <li>Fabric Provisioning for SRIOV-based workloads in K8s</li>
+                  <li>5G BMS O-Cloud Orchestrator</li>
                   <li>Cloud-Native EMS</li>
                   <li>Secure SD-WAN</li>
                   <li>Cloudstack Plugin</li>
