--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="blurb">
             <img src="/images/self.png">
             <h1>Hi there, I'm Pradeep H Krishnamurthy!</h1>
-            <p>Seasoned software professional with 20yrs of design/development experience in building  <em>scalable Network Management Solutions</em> <a href="/about">Read more about me...</a></p>
+            <p>Seasoned software professional with 20+ years of design/development experience in building  <em>scalable Network Management Solutions</em> <a href="/about">Read more about me...</a></p>
         </div><!-- /.blurb -->
     </div><!-- /.container -->
     <footer>
