--- a/about/index.html
+++ b/about/index.html
@@ -111,6 +111,34 @@
             </tr>
           </tbody>
         </table>
+        <h2>Misc</h2>
+          <table>
+            <tbody>
+              <tr>
+                <th>Patents</th>
+                <td>6 granted patents from USPTO
+                  <ul>
+                    <li>8,248,958</li>
+                    <li>9,253,034</li>
+                    <li>10,380,184</li>
+                    <li>11,159,370</li>
+                    <li>11,451,440</li>
+                    <li>11,489,724</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <th>Recognitions</th>
+                <td>Juniper Networks India Pvt Ltd
+                  <ul>
+                    <li>Business Amp Award</li>
+                    <li>CEO Excellence Award</li>
+                    <li>CTO Citizenship Award</li>
+                  </ul>
+                </td>
+              </tr>
+            </tbody>
+          </table>
       </div>
     </div>
     <p></p>
