--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
     <p></p>
     <div class="container">
       <div class="about">
-        <p>A bit about me below in terms of Education and Professional experience/skills</p>
+        <p>A bit about me below in terms of Education and Professional experience/skills/recognitions</p>
         <h2>Education</h2>
         <table>          
           <thead>
@@ -113,6 +113,12 @@
         </table>
         <h2>Misc</h2>
           <table>
+            <thead>
+              <tr>
+                <th>Item</th>
+                <th>Comments</th>
+              </tr>
+            </thead>
             <tbody>
               <tr>
                 <th>Patents</th>
