--- a/about/index.html
+++ b/about/index.html
@@ -116,7 +116,7 @@
             <thead>
               <tr>
                 <th>Item</th>
-                <th>Comments</th>
+                <th>Details</th>
               </tr>
             </thead>
             <tbody>
