--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
     <p></p>
     <div class="container">
       <div class="about">
-        <p>A bit about me below in terms of Education and Professional experience/skills/recognitions</p>
+        <p>A bit about me below in terms of Education and Professional experience/skills/achievements</p>
         <h2>Education</h2>
         <table>          
           <thead>
@@ -111,11 +111,11 @@
             </tr>
           </tbody>
         </table>
-        <h2>Misc</h2>
+        <h2>Achievements</h2>
           <table>
             <thead>
               <tr>
-                <th>Item</th>
+                <th>Category</th>
                 <th>Details</th>
               </tr>
             </thead>
@@ -134,7 +134,7 @@
                 </td>
               </tr>
               <tr>
-                <th>Recognitions</th>
+                <th>Company Awards</th>
                 <td>Juniper Networks India Pvt Ltd
                   <ul>
                     <li>Business Amp Award</li>
