--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@
           <table>
             <thead>
               <tr>
-                <th>Category</th>
+                <th>Item</th>
                 <th>Details</th>
               </tr>
             </thead>
@@ -134,7 +134,7 @@
                 </td>
               </tr>
               <tr>
-                <th>Company Awards</th>
+                <th>Awards</th>
                 <td>Juniper Networks India Pvt Ltd
                   <ul>
                     <li>Business Amp Award</li>
