--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@
           <table>
             <thead>
               <tr>
-                <th>Item</th>
+                <th>Category</th>
                 <th>Details</th>
               </tr>
             </thead>
