--- a/about/index.html
+++ b/about/index.html
@@ -123,14 +123,22 @@
               <tr>
                 <th>Patents</th>
                 <td>6 granted patents from USPTO
-                  <ul>
-                    <li>8,248,958</li>
-                    <li>9,253,034</li>
-                    <li>10,380,184</li>
-                    <li>11,159,370</li>
-                    <li>11,451,440</li>
-                    <li>11,489,724</li>
-                  </ul>
+                  <div class="row">
+                    <div style="width: 30%; float: left;">
+                      <ul>
+                        <li>8,248,958</li>
+                        <li>9,253,034</li>
+                        <li>10,380,184</li>
+                      </ul>
+                    </div>
+                    <div style="width: 30%; float: left;">
+                      <ul>
+                        <li>11,159,370</li>
+                        <li>11,451,440</li>
+                        <li>11,489,724</li>
+                      </ul>
+                    </div>  
+                  </div>  
                 </td>
               </tr>
               <tr>
