--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
               <tr>
                 <th>Patents</th>
                 <td>6 granted patents from USPTO
-                  <div class="row">
+                  <div style="clear:both">
                     <div style="width: 30%; float: left;">
                       <ul>
                         <li>8,248,958</li>
