--- a/about/index.html
+++ b/about/index.html
@@ -50,6 +50,7 @@
               <th>Juniper Networks India Pvt Ltd<br/>(2005-Present)</th>
               <td>Software Design and Development in different products
                 <ul>
+                  <li>Cross-layer Analytics</li>
                   <li>Cloud Native Contrail Networking (K8s-based)</li>
                   <li>5G BMS O-Cloud Orchestrator</li>
                   <li>Cloud-Native EMS</li>
