--- a/about/index.html
+++ b/about/index.html
@@ -92,7 +92,7 @@
             </tr>
             <tr>
               <th>Networking</th>
-              <td>L2, L3, MPLS, Security, SDN, SD-WAN</td>
+              <td>Routing, Switching, Security, MPLS, SDN, EVPN, SD-WAN</td>
             </tr>
             <tr>
               <th>Modeling</th>
