--- a/about/index.html
+++ b/about/index.html
@@ -123,7 +123,7 @@
             <tbody>
               <tr>
                 <th>Patents</th>
-                <td>6 granted patents from USPTO
+                <td>6 granted patents from <a href="https://patentcenter.uspto.gov/">USPTO</a>
                   <div style="clear:both">
                     <div style="width: 50%; float: left;">
                       <ul>
