--- a/about/index.html
+++ b/about/index.html
@@ -125,18 +125,23 @@
                 <th>Patents</th>
                 <td>6 granted patents from <a href="https://patentcenter.uspto.gov/">USPTO</a>
                   <div style="clear:both">
-                    <div style="width: 50%; float: left;">
+                    <div style="width: 33.33%; float: left;">
                       <ul>
                         <li>8,248,958</li>
                         <li>9,253,034</li>
                         <li>10,380,184</li>
                       </ul>
                     </div>
-                    <div style="width: 50%; float: left;">
+                    <div style="width: 33.33%; float: left;">
                       <ul>
                         <li>11,159,370</li>
                         <li>11,451,440</li>
                         <li>11,489,724</li>
+                      </ul>
+                    </div>
+                    <div style="width: 33.33%; float: left;">
+                      <ul>
+                        <li>11,689,418</li>
                       </ul>
                     </div>  
                   </div>  
