--- a/about/index.html
+++ b/about/index.html
@@ -50,7 +50,7 @@
               <th>Juniper Networks India Pvt Ltd<br/>(2005-Present)</th>
               <td>Software Design and Development in different products
                 <ul>
-                  <li>Cross-layer(App, Pod, Computer Node, Network) Analytics for Observability</li>
+                  <li>Cross-layer Analytics ((App, Pod, Computer Node, Network layers) for E2E assurance</li>
                   <li>Cloud Native Contrail Networking (K8s-based)</li>
                   <li>5G BMS O-Cloud Orchestrator</li>
                   <li>Cloud-Native EMS</li>
