--- a/about/index.html
+++ b/about/index.html
@@ -163,6 +163,7 @@
                     <li>Business Amp Award</li>
                     <li>CEO Excellence Award</li>
                     <li>CTO Citizenship Award</li>
+                    <li>PRC (Patent Review Committee) Excellence Award</li>
                   </ul>
                 </td>
               </tr>
